fix menu alignment

--- a/css/index.css
+++ b/css/index.css
@@ -150,6 +150,7 @@ body {
     background-color: transparent;
     padding: 8px;
     color: white;
+    text-align: left;
 }
 
 .menu .items button:hover {
